refactor: clean arch and solid
